mir/src/snapshots/transmute_mir__tests__inner_struct.snap
---
source: mir/src/lib.rs
expression: mir
---
Ok(
    Mir {
        functions: [
            FunctionId(0) => Function {
                identifier: Identifier {
                    id: IdentId(1),
                    span: 1:5; [4, 5],
                },
                symbol_id: SymbolId(19),
                parameters: [],
                variables: {},
                body: Some(
                    ExprId(0),
                ),
                ret: TypeId(1),
                parent: Namespace(
                    NamespaceId(0),
                ),
            },
        ],
        structs: [
            StructId(0) => Struct {
                identifier: Identifier {
                    id: IdentId(2),
                    span: 1:18; [17, 23],
                },
                symbol_id: SymbolId(20),
                fields: Some(
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId(3),
                                span: 1:27; [26, 31],
                            },
                            index: 0,
                            symbol_id: SymbolId(21),
                            type_id: TypeId(4),
                        },
                    ],
                ),
                parent: Function(
                    FunctionId(0),
                ),
            },
        ],
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "Struct",
            IdentId(3) => "field",
            IdentId(4) => "number",
            IdentId(5) => "core",
            IdentId(6) => "add",
            IdentId(7) => "boolean",
            IdentId(8) => "div",
            IdentId(9) => "eq",
            IdentId(10) => "ge",
            IdentId(11) => "gt",
            IdentId(12) => "le",
            IdentId(13) => "lt",
            IdentId(14) => "mul",
            IdentId(15) => "neg",
            IdentId(16) => "neq",
            IdentId(17) => "sub",
            IdentId(18) => "void",
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Block(
                    [
                        StmtId(4),
                    ],
                ),
                span: 1:9; [8, 43],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    None,
                ),
                span: 0:0; [0, 0],
            },
        ],
        namespaces: [
            NamespaceId(0) => (
                None,
                IdentId(0),
            ),
            NamespaceId(1) => (
                Some(
                    NamespaceId(0),
                ),
                IdentId(5),
            ),
        ],
        symbols: [
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(18),
                    Void,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(18),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(4),
                    Number,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(4),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(7),
                    Boolean,
                ),
                type_id: TypeId(2),
                ident_id: IdentId(7),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(17),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(17),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(16),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(16),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
                ident_id: IdentId(15),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(14),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(13),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(12),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(11),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(10),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
                ident_id: IdentId(9),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
                ident_id: IdentId(9),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(8),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
                ident_id: IdentId(6),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: LetFn(
                    FunctionId(0),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
                ident_id: IdentId(1),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Struct,
                type_id: TypeId(10),
                ident_id: IdentId(2),
            },
            SymbolId(21) => Symbol {
                id: SymbolId(21),
                kind: Field(
                    IdentId(3),
                    0,
                ),
                type_id: TypeId(4),
                ident_id: IdentId(3),
            },
        ],
        types: [
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [],
                TypeId(1),
            ),
            TypeId(10) => Struct(
                SymbolId(20),
                StructId(0),
            ),
        ],
    },
)
